--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"ConStr": "Server=DARKGILG\\SQLEXPRESS; Database=ArticulosDB ; Integrated Security=true"
-    "ConStr": "Server=ArticulosDB.mssql.somee.com; Database=ArticulosDB;user id=SamDuran_SQLLogin_1; pwd=o1tt2w1d9c;"
+    "ConStr": "data source = DATA\\ArticulosDB.db"
   },
   "Logging": {
     "LogLevel": {
